<resources>
    <string name="app_name">Seintje</string>
    <string name="rail_piece">rail piece</string>
    <string name="snelheidsborden">Snelheidsborden</string>
    <string name="lichtseinen">Lichtseinen</string>
    <string name="overig">Overig</string>
    <string name="combinatie_lichtsein_met_snelheidsbord">Combinatie lichtsein met snelheidsbord</string>
    <string name="lichtsein_met_snelheidsbord">Lichtsein met snelheidsbord</string>
    <string name="stootjuk">Stootjuk</string>
    <string name="elementen_toevoegen">Elementen toevoegen:</string>
    <string name="hoofdseinen">Hoofdseinen</string>
    <string name="hoog_gedoofd">Hoog gedoofd</string>
    <string name="hoog_rood">Hoog rood</string>
    <string name="sluiten">Sluiten</string>
    <string name="hoog_geel">Hoog geel</string>
    <string name="hoog_groen">Hoog groen</string>
    <string name="hoog_geel_knipper">Hoog geel knipper</string>
    <string name="hoog_groen_knipper">Hoog groen knipper</string>
    <string name="hoog_groen_knipper_6">Hoog groen knipper 6</string>
    <string name="hoog_groen_knipper_8">Hoog groen knipper 8</string>
    <string name="hoog_groen_knipper_12">Hoog groen knipper 12</string>
    <string name="hoog_groen_knipper_13">Hoog groen knipper 13</string>
    <string name="hoog_groen_knipper_4">Hoog groen knipper 4</string>
    <string name="hoog_rood_knipper">Hoog rood knipper</string>
    <string name="hoog_geel_13_knipper">Hoog geel 13 knipper</string>
    <string name="hoog_geel_13">Hoog geel 13</string>
    <string name="hoog_geel_12_knipper">Hoog geel 12 knipper</string>
    <string name="hoog_geel_12">Hoog geel 12</string>
    <string name="hoog_geel_8_knipper">Hoog geel 8 knipper</string>
    <string name="hoog_geel_8">Hoog geel 8</string>
    <string name="hoog_geel_6_knipper">Hoog geel 6 knipper</string>
    <string name="hoog_geel_6">Hoog geel 6</string>
    <string name="hoog_geel_knipper_6">Hoog geel knipper 6</string>
    <string name="p_seinen">P-seinen</string>
    <string name="hoog_geel_knipper_12_knipper">Hoog geel knipper 12 knipper</string>
    <string name="laag_geel_knipper">Laag geel knipper</string>
    <string name="laag_groen">Laag groen</string>
    <string name="laag_geel">Laag geel</string>
    <string name="laag_rood">Laag rood</string>
    <string name="laag_gedoofd">Laag gedoofd</string>
    <string name="seinen_in_het_rood">Seinen die men niet in de praktijk tegenkomt (gedoofd, onjuist etc) worden weergegeven in het rood.</string>
    <string name="hoog_geel_4">Hoog geel 4</string>
    <string name="hoog_geel_4_knipper">Hoog geel 4 knipper</string>
    <string name="bediende_seinen">Bediende seinen</string>
    <string name="voorseinen">Voorseinen</string>
    <string name="lichtsein_snelheidsbord">Lichtsein + snelheidsbord</string>
    <string name="overige">Overige</string>
    <string name="email_ontwikkelaar">Email ontwikkelaar</string>
    <string name="seinen_aanpassen">Seinen aanpassen</string>
    <string name="dialog_icon">Venster sein icoon</string>
    <string name="onjuiste_seinen_weergeven">Onjuiste / gedoofde seinen weergeven.</string>
    <string name="klaar_met_bewerken">Klaar met bewerken</string>
    <string name="gedoofd">Gedoofd</string>
    <string name="rood">Rood</string>
    <string name="geel">Geel</string>
    <string name="geel_knipper">Geel knipper</string>
    <string name="groen">Groen</string>
    <string name="groen_knipper">Groen knipper</string>
    <string name="geel_4">Geel 4</string>
    <string name="geel_6">Geel 6</string>
    <string name="geel_8">Geel 8</string>
    <string name="geel_12">Geel 12</string>
    <string name="geel_13">Geel 13</string>
    <string name="groen_6">Groen 6</string>
    <string name="geel_4_knipper">Geel 4 knipper</string>
    <string name="verlagingsborden">Verlagingsborden</string>
    <string name="verlagingsbord_13">Verlagingsbord 13</string>
    <string name="verlagingsbord_12">Verlagingsbord 12</string>
    <string name="verlagingsbord_8">Verlagingsbord 8</string>
    <string name="verlagingsbord_4">Verlagingsbord 4</string>
    <string name="snelheidsbord_14">Snelheidsbord 14</string>
    <string name="snelheidsbord_13">Snelheidsbord 13</string>
    <string name="snelheidsbord_12">Snelheidsbord 12</string>
    <string name="snelheidsbord_8">Snelheidsbord 8</string>
    <string name="snelheidsbord_4">Snelheidsbord 4</string>
    <string name="baanvaksnelheidsborden">Baanvaksnelheidsborden</string>
    <string name="baanvaksnelheidsbord_8">Baanvaksnelheidsbord 8</string>
    <string name="baanvaksnelheidsbord_13">Baanvaksnelheidsbord 13</string>
    <string name="tsbborden">TSB-borden</string>
    <string name="l_bord">L-bord</string>
    <string name="a_bord">A-bord</string>
    <string name="t6_bord">Tijdelijk snelheidsbord 6</string>
    <string name="e_bord">E-bord</string>
    <string name="t9_bord">Tijdelijk snelheidsbord 9</string>
    <string name="opslaan">Opslaan</string>
    <string name="weet_u_zeker_verwijderen">Weet u zeker dat u dit item wilt verwijderen?</string>
    <string name="nee">NEE</string>
    <string name="ja">JA</string>
    <string name="item_verwijderen">Item verwijderen</string>
    <string name="leeg_spoor">Leeg stuk spoor</string>
    <string name="spoor_met_wissel">Spoor met wissel</string>
    <string name="weet_u_zeker_alles_verwijderen">Weet u zeker dat u alles wilt verwijderen en opnieuw wenst te beginnen?</string>
    <string name="alles_verwijderen">Alles verwijderen</string>
    <string name="naam">Naam</string>
    <string name="error_geen_data">Error: geen data!</string>
    <string name="betekenis">Betekenis</string>
    <string name="hint">Hint</string>
    <string name="opslaan_caps">OPSLAAN</string>
    <string name="hoofdseinen_snelheidsborden">Hoofdsein + snelheidsbord</string>
    <string name="hoog_geel_knipper_snelheidsbord_8">Hoog geel knipper + snelheidsbord 8</string>
    <string name="hoog_groen_knipper_snelheidsbord_14">Hoog groen knipper + snelheidsbord 14</string>
    <string name="hoog_groen_snelheidsbord_8">Hoog groen + snelheidsbord 8</string>
    <string name="hoog_groen_snelheidsbord_13">Hoog groen + snelheidsbord 13</string>
    <string name="hoog_groen_snelheidsbord_14">Hoog groen + snelheidsbord 14</string>
    <string name="hoog_groen_baanvakbord_13">Hoog groen + baanvaksnelheidsbord 13</string>
    <string name="overige_seinen">Overige seinen</string>
    <string name="keperbakens">Keperbakens</string>
</resources>