<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:id="@+id/snelheidsbordDialogCardView"
    app:cardCornerRadius="28dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/heroIcon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_verlagingsbord_26"
            app:tint="?attr/colorOnSurfaceVariant"
            android:alpha="0.7"
            android:contentDescription="@string/dialog_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:text="@string/snelheidsborden"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorOnSurface"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorSecondary"
            android:alpha="0.8"
            />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:scrollbarThumbVertical="?attr/colorSecondary"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="40dp">

            <RadioGroup
                android:id="@+id/snelheidsbordenGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/snelheidsborden"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="5dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonSnelheidsbord4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/snelheidsbord_4"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonSnelheidsbord8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/snelheidsbord_8"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />


                <RadioButton
                    android:id="@+id/RadioButtonSnelheidsbord12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/snelheidsbord_12"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonSnelheidsbord13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/snelheidsbord_13"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonSnelheidsbord14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/snelheidsbord_14"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/baanvaksnelheidsborden"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="5dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonBaanvaksnelheidsbord8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/baanvaksnelheidsbord_8"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonBaanvaksnelheidsbord13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/baanvaksnelheidsbord_13"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/verlagingsborden"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="5dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVerlagingsbord4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/verlagingsbord_4"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVerlagingsbord8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/verlagingsbord_8"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVerlagingsbord12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/verlagingsbord_12"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVerlagingsbord13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/verlagingsbord_13"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/tsbborden"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="5dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonTSBBordL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/l_bord"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonTSBBordA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/a_bord"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonTSBBordT6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/t6_bord"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonTSBBordT9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:maxLines="1"
                    android:text="@string/t9_bord"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonTSBBordE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="@string/e_bord"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />


            </RadioGroup>

            </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorSecondary"
            android:alpha="0.8"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="end"
            android:backgroundTint="?attr/colorSurface"
            android:textColor="?attr/colorPrimary"
            android:textAllCaps="true"
            android:text="@string/sluiten"
            app:rippleColor="?attr/colorOnSurface"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>