<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:id="@+id/voorseinDialogCardView"
    app:cardCornerRadius="28dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/heroIcon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_voorsein_26"
            app:tint="?attr/colorOnSurfaceVariant"
            android:alpha="0.7"
            android:contentDescription="@string/dialog_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:text="@string/voorseinen"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorOnSurface"
            />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/onjuistVoorseinCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/onjuiste_seinen_weergeven"
            android:checked="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorSecondary"
            android:alpha="0.8"
            />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:scrollbarThumbVertical="?attr/colorSecondary"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="40dp">

            <RadioGroup
                android:id="@+id/voorSeinGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/voorseinen"
                    android:layout_marginBottom="5dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGedoofd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.9"
                    android:maxLines="1"
                    android:text="@string/gedoofd"
                    android:textColor="?attr/colorError"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinRood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.9"
                    android:maxLines="1"
                    android:text="@string/rood"
                    android:textColor="?attr/colorError"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/geel"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeelKnipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.9"
                    android:maxLines="1"
                    android:text="@string/geel_knipper"
                    android:textColor="?attr/colorError"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGroen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/groen"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGroenKnipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/groen_knipper"
                    android:textSize="14dp"
                    android:textColor="?attr/colorError"
                    android:alpha="0.9"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGroen6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/groen_6"
                    android:textSize="14dp"
                    android:textColor="?attr/colorError"
                    android:alpha="0.9"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeel4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/geel_4"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeel4Knipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/geel_4_knipper"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeel6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/geel_6"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeel8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/geel_8"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeel12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/geel_12"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

                <RadioButton
                    android:id="@+id/RadioButtonVoorSeinGeel13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/geel_13"
                    android:textSize="14dp"
                    tools:ignore="SpUsage,DuplicateSpeakableTextCheck,TextSizeCheck"
                    />

            </RadioGroup>

            </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorSecondary"
            android:alpha="0.8"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="end"
            android:backgroundTint="?attr/colorSurface"
            android:textColor="?attr/colorPrimary"
            android:textAllCaps="true"
            android:text="@string/sluiten"
            app:rippleColor="?attr/colorOnSurface"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>